# lettermint-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: client.rs  lib.rs  reqwest.rs  webhook.rs
src/api/email/: send.rs
src/testing/: emails.rs
tests/: integration.rs
