[package]
name = "lettermint"
description = "Lettermint email service client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/franzos/lettermint-rs"
homepage = "https://github.com/franzos/lettermint-rs"
documentation = "https://docs.rs/lettermint"
keywords = ["lettermint", "email", "e-mail", "http"]
categories = ["api-bindings", "email", "web-programming::http-client"]
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
bytes = { version = "1.6" }
http = { version = "1.1" }
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
hex = { version = "0.4" }
reqwest = { version = "0.13", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2.0" }
typed-builder = { version = "0.23" }

[features]
default = []
reqwest = ["dep:reqwest"]
reqwest-native-tls = ["reqwest", "reqwest/native-tls"]
reqwest-rustls = ["reqwest", "reqwest/rustls"]

[dev-dependencies]
base64 = { version = "0.22" }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
lettermint = { path = ".", features = ["reqwest", "reqwest-rustls"] }
